Fix lower points grade calculation. Changed "below" to "0" so points value calculates. Points spacing.

--- a/app/assets/stylesheets/gui.css.scss
+++ b/app/assets/stylesheets/gui.css.scss
@@ -18,8 +18,7 @@
             section.active{display:block;}
         }
     }
-    #view_syllabus #preview {display:block;}
-    #view_syllabus i{display:none;}
+
     nav {max-width: 930px;}
 
 #wrapper { height: 100%; width: 916px; position: relative; overflow: hidden; min-height: 400px; float: left; }
